# op-rbuilder

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: checks_docker.yaml  docker_build.yaml  op_rbuilder_checks.yaml  op_rbuilder_release.yaml  op_rbuilder_reproducible_verify.yaml  tdx_quote_provider_checks.yaml  tdx_quote_provider_release.yaml
crates/op-rbuilder/: Cargo.toml
crates/op-rbuilder/src/: launcher.rs  metrics.rs  mock_tx.rs  monitor_tx_pool.rs  revert_protection.rs  tx_signer.rs
crates/op-rbuilder/src/args/: mod.rs  op.rs  playground.rs
crates/op-rbuilder/src/builders/: builder_tx.rs  context.rs  generator.rs  mod.rs
crates/op-rbuilder/src/builders/flashblocks/: best_txs.rs  builder_tx.rs  config.rs  mod.rs  payload.rs  wspub.rs
crates/op-rbuilder/src/builders/standard/: builder_tx.rs  payload.rs  service.rs
crates/op-rbuilder/src/flashtestations/: args.rs  attestation.rs  service.rs  tx_manager.rs
crates/op-rbuilder/src/gas_limiter/: mod.rs
crates/op-rbuilder/src/primitives/: bundle.rs
crates/op-rbuilder/src/primitives/reth/: engine_api_builder.rs  execution.rs
crates/op-rbuilder/src/tests/: data_availability.rs  flashblocks.rs  gas_limiter.rs  ordering.rs  revert.rs  smoke.rs  txpool.rs
crates/op-rbuilder/src/tests/framework/: apis.rs  driver.rs  external.rs  instance.rs  mod.rs  txs.rs  utils.rs
crates/op-rbuilder/src/tests/framework/macros/src/: lib.rs
crates/tdx-quote-provider/src/: lib.rs  provider.rs
crates/tdx-quote-provider/tests/: simple.rs
docs/: eth_sendBundle.md
